// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="ant-typography {}"
  id="default"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  
</div>
`;

exports[`Render properties.code: true - value[0] 1`] = `
<div
  className="ant-typography {}"
  id="properties.code: true"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <code>
    <span
      className="{}"
    />
  </code>
</div>
`;

exports[`Render properties.content - value[0] 1`] = `
<div
  className="ant-typography {}"
  id="properties.content"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
</div>
`;

exports[`Render properties.content short - value[0] 1`] = `
<div
  className="ant-typography {}"
  id="properties.content short"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
</div>
`;

exports[`Render properties.copyable: icon - value[0] 1`] = `
<div
  className="ant-typography {}"
  id="properties.copyable: icon"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
  <div
    aria-label="Copy"
    className="ant-typography-copy"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    style={
      Object {
        "background": "transparent",
        "border": 0,
        "display": "inline-block",
        "lineHeight": "inherit",
        "padding": 0,
      }
    }
    tabIndex={0}
  >
    <span
      aria-label="loading-3-quarters"
      basePath=""
      className="anticon anticon-loading-3-quarters anticon-spin {\\"style\\":[{},null]}"
      id="properties.copyable: icon_copyable_icon"
      required={false}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="loading-3-quarters"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.copyable: icon: [] - value[0] 1`] = `
<div
  className="ant-typography {}"
  id="properties.copyable: icon: []"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
  <div
    aria-label="Copy"
    className="ant-typography-copy"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    style={
      Object {
        "background": "transparent",
        "border": 0,
        "display": "inline-block",
        "lineHeight": "inherit",
        "padding": 0,
      }
    }
    tabIndex={0}
  >
    <span
      aria-label="loading-3-quarters"
      basePath=""
      className="anticon anticon-loading-3-quarters anticon-spin {\\"style\\":[{},null]}"
      id="properties.copyable: icon: []_copyable_before_icon"
      required={false}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="loading-3-quarters"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.copyable: text: one - value[0] 1`] = `
<div
  className="ant-typography {}"
  id="properties.copyable: text: one"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
  <div
    aria-label="Copy"
    className="ant-typography-copy"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    style={
      Object {
        "background": "transparent",
        "border": 0,
        "display": "inline-block",
        "lineHeight": "inherit",
        "padding": 0,
      }
    }
    tabIndex={0}
  >
    <span
      aria-label="copy"
      className="anticon anticon-copy"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.copyable: tooltips: [] - value[0] 1`] = `
<div
  className="ant-typography {}"
  id="properties.copyable: tooltips: []"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
  <div
    aria-label="Click to copy"
    className="ant-typography-copy"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    style={
      Object {
        "background": "transparent",
        "border": 0,
        "display": "inline-block",
        "lineHeight": "inherit",
        "padding": 0,
      }
    }
    tabIndex={0}
  >
    <span
      aria-label="copy"
      className="anticon anticon-copy"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.copyable: true - value[0] 1`] = `
<div
  className="ant-typography {}"
  id="properties.copyable: true"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
  <div
    aria-label="Copy"
    className="ant-typography-copy"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    style={
      Object {
        "background": "transparent",
        "border": 0,
        "display": "inline-block",
        "lineHeight": "inherit",
        "padding": 0,
      }
    }
    tabIndex={0}
  >
    <span
      aria-label="copy"
      className="anticon anticon-copy"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.delete: true - value[0] 1`] = `
<div
  className="ant-typography {}"
  id="properties.delete: true"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <del>
    <span
      className="{}"
    />
  </del>
</div>
`;

exports[`Render properties.disabled: true - value[0] 1`] = `
<div
  className="ant-typography ant-typography-disabled {}"
  id="properties.disabled: true"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
</div>
`;

exports[`Render properties.ellipsis: expandable, rows - value[0] 1`] = `
<div
  className="ant-typography ant-typography-ellipsis {}"
  id="properties.ellipsis: expandable, rows"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
</div>
`;

exports[`Render properties.ellipsis: rows - value[0] 1`] = `
<div
  className="ant-typography ant-typography-ellipsis ant-typography-ellipsis-multiple-line {}"
  id="properties.ellipsis: rows"
  style={
    Object {
      "WebkitLineClamp": 3,
    }
  }
>
  <span
    className="{}"
  />
</div>
`;

exports[`Render properties.ellipsis: rows, suffix - value[0] 1`] = `
<div
  className="ant-typography ant-typography-ellipsis {}"
  id="properties.ellipsis: rows, suffix"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
  and other
</div>
`;

exports[`Render properties.ellipsis: true - value[0] 1`] = `
<div
  className="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line {}"
  id="properties.ellipsis: true"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
</div>
`;

exports[`Render properties.mark: true - value[0] 1`] = `
<div
  className="ant-typography {}"
  id="properties.mark: true"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <mark>
    <span
      className="{}"
    />
  </mark>
</div>
`;

exports[`Render properties.strong: true - value[0] 1`] = `
<div
  className="ant-typography {}"
  id="properties.strong: true"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <strong>
    <span
      className="{}"
    />
  </strong>
</div>
`;

exports[`Render properties.type: danger - value[0] 1`] = `
<div
  className="ant-typography ant-typography-danger {}"
  id="properties.type: danger"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
</div>
`;

exports[`Render properties.type: secondary - value[0] 1`] = `
<div
  className="ant-typography ant-typography-secondary {}"
  id="properties.type: secondary"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
</div>
`;

exports[`Render properties.type: warning - value[0] 1`] = `
<div
  className="ant-typography ant-typography-warning {}"
  id="properties.type: warning"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
</div>
`;

exports[`Render properties.underline: true - value[0] 1`] = `
<div
  className="ant-typography {}"
  id="properties.underline: true"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <u>
    <span
      className="{}"
    />
  </u>
</div>
`;

exports[`Render with html content - value[0] 1`] = `
<div
  className="ant-typography {}"
  id="with html content"
  style={
    Object {
      "WebkitLineClamp": undefined,
    }
  }
>
  <span
    className="{}"
  />
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.code: true 1`] = `true`;

exports[`Test Schema properties.code: true 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;

exports[`Test Schema properties.content short 1`] = `true`;

exports[`Test Schema properties.content short 2`] = `null`;

exports[`Test Schema properties.copyable: icon 1`] = `true`;

exports[`Test Schema properties.copyable: icon 2`] = `null`;

exports[`Test Schema properties.copyable: icon: [] 1`] = `true`;

exports[`Test Schema properties.copyable: icon: [] 2`] = `null`;

exports[`Test Schema properties.copyable: text: one 1`] = `true`;

exports[`Test Schema properties.copyable: text: one 2`] = `null`;

exports[`Test Schema properties.copyable: tooltips: [] 1`] = `true`;

exports[`Test Schema properties.copyable: tooltips: [] 2`] = `null`;

exports[`Test Schema properties.copyable: true 1`] = `true`;

exports[`Test Schema properties.copyable: true 2`] = `null`;

exports[`Test Schema properties.delete: true 1`] = `true`;

exports[`Test Schema properties.delete: true 2`] = `null`;

exports[`Test Schema properties.disabled: true 1`] = `true`;

exports[`Test Schema properties.disabled: true 2`] = `null`;

exports[`Test Schema properties.ellipsis: expandable, rows 1`] = `true`;

exports[`Test Schema properties.ellipsis: expandable, rows 2`] = `null`;

exports[`Test Schema properties.ellipsis: rows 1`] = `true`;

exports[`Test Schema properties.ellipsis: rows 2`] = `null`;

exports[`Test Schema properties.ellipsis: rows, suffix 1`] = `true`;

exports[`Test Schema properties.ellipsis: rows, suffix 2`] = `null`;

exports[`Test Schema properties.ellipsis: true 1`] = `true`;

exports[`Test Schema properties.ellipsis: true 2`] = `null`;

exports[`Test Schema properties.mark: true 1`] = `true`;

exports[`Test Schema properties.mark: true 2`] = `null`;

exports[`Test Schema properties.strong: true 1`] = `true`;

exports[`Test Schema properties.strong: true 2`] = `null`;

exports[`Test Schema properties.type: danger 1`] = `true`;

exports[`Test Schema properties.type: danger 2`] = `null`;

exports[`Test Schema properties.type: secondary 1`] = `true`;

exports[`Test Schema properties.type: secondary 2`] = `null`;

exports[`Test Schema properties.type: warning 1`] = `true`;

exports[`Test Schema properties.type: warning 2`] = `null`;

exports[`Test Schema properties.underline: true 1`] = `true`;

exports[`Test Schema properties.underline: true 2`] = `null`;

exports[`Test Schema with html content 1`] = `true`;

exports[`Test Schema with html content 2`] = `null`;
